corrected the alignment

--- a/portfolioStyle.css
+++ b/portfolioStyle.css
@@ -6,6 +6,7 @@
 
 .fa-solid {
     color: #404040;
+    size: 1rem;
 }
 
 
